refactored the rss service to use an updated schema which now includes a description. also the rss controller now fetches the rss metadata from the provided rss link
